cluster/overlays/zahariev.com/mattermost/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: mattermost
spec:
  template:
    spec:
      containers:
      - name: mattermost
